Updated gulpfile and folders

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,13 @@
   <title>Ideas</title>
   <link rel="stylesheet" href="/css/style.css" />
 </head>
-<body ng-app>
+<body ng-app="ideasApp">
   <h1>Ideas</h1>
   <p>
     An application to share and discuss project ideas
   </p>
+
+  <ng-view></ng-view>
 
  <script type="text/javscript" src="/js/scripts.js"></script>
 </body>
