--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html ng-app="ideasApp">
 <head>
   <title>Ideas</title>
   <link rel="stylesheet" href="/css/style.css" />
+  <base href="/">
 </head>
-<body ng-app="ideasApp">
+<body>
   <h1>Ideas</h1>
   <p>
     An application to share and discuss project ideas
@@ -11,6 +13,6 @@
 
   <ng-view></ng-view>
 
- <script type="text/javscript" src="/js/scripts.js"></script>
+  <script src="/js/scripts.js" type="text/javascript"></script>
 </body>
 </html>
